Add Show only ET sensors. Now MT/VT (offpeak/peak)

--- a/custom_components/mojelektro/translations/en.json
+++ b/custom_components/mojelektro/translations/en.json
@@ -7,10 +7,26 @@
         "data": {
           "token": "Token",
           "meter_id": "Meter ID (EIMM)",
-		  "decimal": "Decimal places for sensors."
+	  "decimal": "Decimal places for sensors.",
+	  "show_et_only": "Show only unified tarrif (ET) readings. No MT/VT."  
         },
-		"data_description": {
-          "decimal": "Leave empty for default (4) or enter decimal places for energy sensors (0-10)."
+	"data_description": {
+	    "decimal": "Leave empty for default (4) or enter decimal places for energy sensors (0-10).",
+	    "show_et_only": "Useful for net-zero metering users that don't care about offpeak/peak redings"
+        }
+      },
+      "reconfigure": {
+        "title": "Connect to Moj Elektro API",
+        "description": "Enter your credentials to connect to Moj Elektro API.",
+        "data": {
+          "token": "Token",
+          "meter_id": "Meter ID (EIMM)",
+	  "decimal": "Decimal places for sensors.",
+	  "show_et_only": "Show only unified tarrif (ET) readings. No MT/VT."  
+        },
+	"data_description": {
+	    "decimal": "Leave empty for default (4) or enter decimal places for energy sensors (0-10).",
+	    "show_et_only": "Useful for net-zero metering users that don't care about offpeak/peak redings"
         }
       }
     },
